Flipscroll gamedefinition alignement fix

--- a/Source/UI/css/nemestats.css
+++ b/Source/UI/css/nemestats.css
@@ -337,8 +337,6 @@ button > i.fa {
     height: 100px; }
   .flip-scroll .edit-head {
     height: 48px; }
-  .flip-scroll.gameDefinitionsList .edit-head {
-    height: 40px; }
   .flip-scroll .name-head {
     height: 70px; }
   .flip-scroll .nemesis-head {
