--- a/Source/UI/sass/nemestats/mobile.scss
+++ b/Source/UI/sass/nemestats/mobile.scss
@@ -24,11 +24,6 @@
             height: $edit-height;
         }
 
-        &.gameDefinitionsList {
-            .edit-head {
-                height: $edit-height - 8;
-            }
-        }
 
         .name-head {
             height: $gamename-height;
